force-app/src/objects/c2g__CollectionsSpace__c.object
<CustomObject>
    <description>Custom object used by collections workspace to store the collections activity for a day.</description>
    <fields>
        <fullName>c2g__CollectionsDate__c</fullName>
        <label>Collections Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Collections Space</relationshipLabel>
        <relationshipName>CollectionsSpace</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfReminders__c</fullName>
        <label>Total Number of Reminders</label>
        <summaryForeignKey>c2g__Reminder__c.c2g__CollectionsSpace__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Collections Space</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Company__c</columns>
        <columns>c2g__CollectionsDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS-{000000000}</displayFormat>
        <label>Collections Space Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Space</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>